2004-12-09  Alp Toker  <alp@atoker.com>

	* cilc.cs:
	Support inheritance (within a single namespace).
	Enhance CodeWriter.
	Handle nested namespaces properly.
	Generate forward type declarations.
	Use the real type, not MonoObject, for function parameters.
	Ignore non-public types for now.
	Handle multiple namespaces in a single assembly.
	Name the generated .so according to the input assembly name.
	Code generator access modifier cleanups.
	Use base name of input as default output target directory.
	* Makefile:
	Build Demo.dll, not Test.dll.

2004-12-08  Alp Toker  <alp@atoker.com>

	* cilc.cs:
	Produce genuine GObjects.
	Start support for events/signals and enums.
	Handle overloaded methods.
	Report ignored types, warn on potentially incorrect code generation.
	More conflict avoidance.
	Cleaned up warnings.
	* README: Update test instructions.

2004-12-06  Alp Toker  <alp@atoker.com>

	* cilc.cs: Update to new embedding API: use mono_assembly_get_image()
	Avoid conflicting parameter and internal variable names.
	Use intermediary object files before linking.

2004-06-09  Raja R Harinath  <rharinath@novell.com>

	* Makefile (HAS_TEST): Remove.
	(run-test-local): Move rules to and depend on ...
	(run-cilc-test): ... this.

2003-05-02  Alp Toker  <alp@atoker.com>

	* cilc.cs: Print usage info

2003-05-01  Alp Toker  <alp@atoker.com>

	* cilc.cs: Support arguments, clean up some gcc warnings
	* Test.cs, demo.c: More extensive test

2003-04-25  Alp Toker  <alp@atoker.com>

	* Initial release of cilc